# xml7shi

./: README.md  pyproject.toml
examples/: basic.py  basic_usage.py  tag.py
tests/: test_tag.py
