[project]
name = "xml7shi"
version = "0.1.0"
description = "Simple XML parser without tag structure validation"
readme = "README.md"
requires-python = ">=3.10"
repository = "https://github.com/7shi/xml7shi"
license = { text = "CC0 1.0 Universal (CC0 1.0) Public Domain Dedication" }
authors = [
    { name = "7shi", email = "7shi@live.jp" },
]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xml7shi"]
